# telegram_github_1

./: .gitignore  Makefile  config.py  districts.csv  main.py  pyproject.toml
migrations/: env.py
models/: __init__.py  base.py  categories.py
